# rag_interview_experience

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: agentic_rag.py  agentic_rag_test.py  cache_local.py  chat_utils.py  main.py  scraper_runner.py  streamlit-chat.py
app/api/: app.py
app/db_functions/: add_embeddings.py  company_crud.py  get_similar_results.py
app/factory/: scraper_factory.py
app/gemini/: gemini_functions.py  get_chunks.py
app/interfaces/: scraper_interface.py
app/llm/: llm_functions.py
app/scraper/: gfg_scraper.py  leetcode_scraper.py  main_scraper.py
app/scrapers/: gfg_scraper.py  leetcode_scraper.py
